--- a/zwp2/wp-content/themes/twentytwentyfive/templates/home.html
+++ b/zwp2/wp-content/themes/twentytwentyfive/templates/home.html
@@ -8,3 +8,13 @@
 <!-- /wp:group -->
 
 <!-- wp:template-part {"slug":"footer"} /-->
+
+<!-- Event snippet for Page view conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17103347823/yqXOCP2eyssaEO_Awds_',
+      'value': 1.0,
+      'currency': 'EUR'
+  });
+</script>
+
